# BotDashboard

./: .env.example  README.md  main.py  pyproject.toml
data/: init.sql
src/: database.py  limiter.py  models.py  oauth.py
src/routers/: __init__.py  api.py  dashboard.py  oauth.py
templates/: dashboard.html
